# quantadb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.ps1  build.sh
.github/workflows/: client-cli.yml  core.yml  pages.yml  quantadb-server.yml
bench/: Cargo.toml
bench/src/: main.rs
cli-client/: Cargo.toml
cli-client/src/: client.rs  error.rs  lib.rs  main.rs  types.rs
client/: Cargo.toml  tauri.conf.json
client-web/: index.html  package.json  vite.config.ts
client-web/src/: App.vue  style.css
client/src/: client.rs  main.rs
connectors/python-client/: Cargo.toml  README.md  pyproject.toml
connectors/python-client/examples/: basic_usage.py
connectors/python-client/src/: lib.rs
connectors/rust-client/: Cargo.toml
connectors/rust-client/examples/: basic_usage.rs
connectors/rust-client/src/: client.rs  error.rs  lib.rs  types.rs
docs/: architecture.md  benchmarks.md  execution.md  index-format-v1.md  mvcc.md  protocol-v1.md  quanta-sql-spec-v0.1.md  sql-syntax.md  storage-format-v1.md
docs/legacy/: quanta-sql-spec-v0.1.md
engine/: Cargo.toml
engine/benches/: execute.rs
engine/src/: access.rs  codec.rs  database.rs  error.rs  expression.rs  lib.rs  result.rs  schema.rs  value.rs
index/: Cargo.toml
index/benches/: tree.rs
index/src/: cache.rs  error.rs  lib.rs  node.rs  tree.rs
mvcc/: Cargo.toml
mvcc/benches/: transactions.rs
mvcc/src/: database.rs  error.rs  index_manifest.rs  lib.rs  record.rs
mvcc/tests/: history.rs
server/: Cargo.toml  test_client.ps1  test_client.py  test_queries.sql
server/src/: config.rs  error.rs  http.rs  lib.rs  main.rs  pg.rs  protocol.rs  server.rs  service.rs
server/src/net/: mod.rs  protocol.rs  server.rs
server/src/sql/: ast.rs  executor.rs  mod.rs  parser.rs
server/src/storage/: engine.rs  mod.rs  persistence.rs  table.rs  types.rs
storage/: Cargo.toml
storage/benches/: storage.rs
storage/src/: buffer_pool.rs  byte_lru.rs  data_file.rs  error.rs  group_commit.rs  lib.rs  page.rs  store.rs  wal.rs
syntax/: Cargo.toml
syntax/benches/: parse.rs
syntax/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  token.rs
web/: index.html  scripts.js  style.css
