[workspace]
members = ["engine", "index", "mvcc", "server", "storage", "syntax"]
exclude = ["cli-client", "client"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/martian56/quantadb"

[workspace.dependencies]
crc32fast = "1.4"
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
fs2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
dbg_macro = "warn"
todo = "warn"
unwrap_used = "warn"
