[package]
name = "quantadb-engine"
description = "Relational catalog and SQL execution engine for QuantaDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quantadb-mvcc = { path = "../mvcc" }
quantadb-syntax = { path = "../syntax" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
quantadb-mvcc = { path = "../mvcc" }
tempfile.workspace = true

[[bench]]
name = "execute"
harness = false

[lints]
workspace = true
