[package]
name = "quantadb-index"
description = "Persistent immutable B+ tree indexes for QuantaDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quantadb-storage = { path = "../storage" }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "tree"
harness = false

[lints]
workspace = true
