[package]
name = "quantadb-server"
description = "QuantaDB network server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quantadb-engine = { path = "../engine" }
quantadb-mvcc = { path = "../mvcc" }
quantadb-syntax = { path = "../syntax" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
