[package]
name = "quantadb-syntax"
description = "Span-aware SQL lexer, AST, and parser for QuantaDB"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
